some edits